# API4ML

./: .env  EMPATHY_DASHBOARD.py  EMPATHY_EXAMPLES.py  README.md  TEST_EMPATHY.py  TEST_EXAMPLES.py  ai_desk.db  pyproject.toml  recreate_db.py  recreate_db_from_models.py  recreate_db_standalone.py
app/: app.py  schemas.py
app/api/: eda.py  empathy.py  sessions.py
app/services/: __init__.py  ai_service.py  eda_service.py
app/utils/: __init__.py  markdown.py
dataset/: 41e3129b_ma_risk_synthetic_dataset.csv
